<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/this_is_a_textview"
        android:onClick="changeColor"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/alphaNum"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/alpha_numeric_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/numeric"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/numeric_values"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alphaNum" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeric"
        android:src="@drawable/image"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"/>

</androidx.constraintlayout.widget.ConstraintLayout>